test/tests/compiler/18_structures/invalid_parse/extra_credit/plx1_sizeof_union_member_2.plx
type union u1(a: i32)
    
pub fn main(none) i32 {
    u: union u1 = $(10)
    sizeof(u).a = 20
    return 0
}
